saving html fixes, email updates, and layout issues

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -107,6 +107,7 @@ header .intro-text .skills {
   font-weight: 300;
   color: black;
 }
+#goHome,
 #iou{
   background-color: none;
   border-color: #74aaba;
